<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="422dp"
        android:layout_height="285dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bgsatu" />

    <TextView
        android:id="@+id/tv_tittle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="121dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="Getting Started"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_tittle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="Created account to continue"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle1"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/tv_name"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Name"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name"
        android:alpha="0"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="355dp"
        android:layout_height="60dp"
        app:boxStrokeColor="@color/secondary_green"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:lines="1"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="246dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Email"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_name" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:alpha="0"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="355dp"
        android:layout_height="60dp"
        app:boxStrokeColor="@color/secondary_green"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

        <io.github.nikita756.custom.EditTextEmail
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Password"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email" />


    <io.github.nikita756.custom.InputPassword
        android:id="@+id/input_password"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_regist"
        android:alpha="0"
        android:layout_width="234dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_regular"
        android:text="Register"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />


</androidx.constraintlayout.widget.ConstraintLayout>